fixes skills on mobile view

--- a/client/src/components/AboutMe/AboutMe.css
+++ b/client/src/components/AboutMe/AboutMe.css
@@ -33,6 +33,7 @@
   font-size: 32px;
   margin: 0 auto;
   line-height: 1.3;
+  padding: 20px;
 }
 
 
@@ -83,12 +84,13 @@
   .about-me {
     font-size: 50px;
     justify-self: center;
-    align-self: flex-start;
+    align-self: center;
     margin: 0;
   }
 
   .brand-statement {
-    font-size: 15px;
+    font-size: 1.03rem;
+    max-width: 100vw;
   }
   
   .brand-statement-outer {
@@ -100,6 +102,8 @@
 
   .skills-outer {
     margin: 0;
+    max-width: 100vw;
+    min-height: 50vh;
   }
 
   .my-skills {
@@ -108,14 +112,17 @@
     }
 
   .skills {
-    width: 40px;
+    width: 30px;
     margin-bottom: 8px;
   }
 
   .skills-container {
-    align-items: center;
     justify-content: center;
     margin: 0;
+  }
+
+  .skill-img-container {
+    margin: 10px;
   }
 }
 
